test/error/error.input065.zc
Enum type redeclared:fred on line 2 of input065.zc
